--- a/Alfred.alfredpreferences/workflows/user.workflow.872DAA9E-DD39-4BB8-A536-A6EBA3A35419/info.plist
+++ b/Alfred.alfredpreferences/workflows/user.workflow.872DAA9E-DD39-4BB8-A536-A6EBA3A35419/info.plist
@@ -76,7 +76,7 @@
 				<key>argumenttype</key>
 				<integer>2</integer>
 				<key>keyword</key>
-				<string>coreaudiod</string>
+				<string>restart audio</string>
 				<key>subtext</key>
 				<string>Restart coreaudiod daemon to fix Bluetooth audio issues</string>
 				<key>text</key>
@@ -97,7 +97,7 @@
 				<key>argumenttype</key>
 				<integer>2</integer>
 				<key>keyword</key>
-				<string>balancefix</string>
+				<string>center audio</string>
 				<key>subtext</key>
 				<string>Re-center L/R audio balance for the current output source</string>
 				<key>text</key>
@@ -116,7 +116,9 @@
 			<key>config</key>
 			<dict>
 				<key>applescript</key>
-				<string>tell application "System Preferences"	activate	reveal anchor "output" of pane id "com.apple.preference.sound"	delay 0.5 -- If you get an error, it's possible this delay isn't long enough.end telltell application "System Events"	tell slider 1 of group 1 of tab group 1 of window 1 of process "System Preferences"		set value to 0.5	end tellend telltell application "System Preferences"	quitend tell</string>
+				<string>on alfred_script(q)
+tell application "System Preferences"	activate	reveal anchor "output" of pane id "com.apple.preference.sound"	delay 0.5 -- If you get an error, it's possible this delay isn't long enough.end telltell application "System Events"	tell slider 1 of group 1 of tab group 1 of window 1 of process "System Preferences"		set value to 0.5	end tellend telltell application "System Preferences"	quitend tell
+end alfred_script</string>
 				<key>cachescript</key>
 				<true/>
 			</dict>
