--- a/Alfred.alfredpreferences/preferences/local/965e4179de212c264ebce5830abeb1e7796d503a/appearance/prefs.plist
+++ b/Alfred.alfredpreferences/preferences/local/965e4179de212c264ebce5830abeb1e7796d503a/appearance/prefs.plist
@@ -5,6 +5,8 @@
 	<key>currentthemeuid</key>
 	<string>theme.bundled.osx</string>
 	<key>darkthemeuid</key>
-	<string>theme.custom.81C1948E-4D12-41BB-B0CE-12E88A7A770B</string>
+	<string>theme.custom.269C4FD7-6B4E-4D4C-9C90-D6B84C116B18</string>
+	<key>lightthemeuid</key>
+	<string>theme.custom.1143980A-D20F-4E10-AE07-5B3F546A3731</string>
 </dict>
 </plist>
