--- a/Alfred.alfredpreferences/workflows/user.workflow.3C2A1962-C028-4614-BFD2-FC8DC3590330/info.plist
+++ b/Alfred.alfredpreferences/workflows/user.workflow.3C2A1962-C028-4614-BFD2-FC8DC3590330/info.plist
@@ -86,6 +86,19 @@
 				<false/>
 			</dict>
 		</array>
+		<key>9541024D-1027-4A3F-9AF7-F7B9611C749D</key>
+		<array>
+			<dict>
+				<key>destinationuid</key>
+				<string>30C63C69-4E44-4C2D-934E-8C7293DA1FA1</string>
+				<key>modifiers</key>
+				<integer>0</integer>
+				<key>modifiersubtext</key>
+				<string></string>
+				<key>vitoclose</key>
+				<false/>
+			</dict>
+		</array>
 		<key>A1719BC6-178D-4645-965E-D2D4AF3CAB05</key>
 		<array>
 			<dict>
@@ -125,6 +138,19 @@
 				<false/>
 			</dict>
 		</array>
+		<key>EAC71AD7-6378-4DD7-BAB0-6DFAA47D7A36</key>
+		<array>
+			<dict>
+				<key>destinationuid</key>
+				<string>9541024D-1027-4A3F-9AF7-F7B9611C749D</string>
+				<key>modifiers</key>
+				<integer>0</integer>
+				<key>modifiersubtext</key>
+				<string></string>
+				<key>vitoclose</key>
+				<false/>
+			</dict>
+		</array>
 		<key>F865918D-BE60-42D2-8110-D8B5FC61300F</key>
 		<array>
 			<dict>
@@ -149,6 +175,21 @@
 	<string>Automate Mac</string>
 	<key>objects</key>
 	<array>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>command</key>
+				<integer>1</integer>
+				<key>confirm</key>
+				<false/>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.action.systemcommand</string>
+			<key>uid</key>
+			<string>3F9C47AF-FF7F-4A0D-BBC3-6F42EC85F4AB</string>
+			<key>version</key>
+			<integer>2</integer>
+		</dict>
 		<dict>
 			<key>config</key>
 			<dict>
@@ -183,15 +224,31 @@
 		<dict>
 			<key>config</key>
 			<dict>
-				<key>command</key>
-				<integer>1</integer>
-				<key>confirm</key>
+				<key>action</key>
+				<integer>0</integer>
+				<key>argument</key>
+				<integer>0</integer>
+				<key>focusedappvariable</key>
 				<false/>
+				<key>focusedappvariablename</key>
+				<string></string>
+				<key>hotkey</key>
+				<integer>119</integer>
+				<key>hotmod</key>
+				<integer>9437184</integer>
+				<key>hotstring</key>
+				<string>↘</string>
+				<key>leftcursor</key>
+				<false/>
+				<key>modsmode</key>
+				<integer>0</integer>
+				<key>relatedAppsMode</key>
+				<integer>0</integer>
 			</dict>
 			<key>type</key>
-			<string>alfred.workflow.action.systemcommand</string>
+			<string>alfred.workflow.trigger.hotkey</string>
 			<key>uid</key>
-			<string>3F9C47AF-FF7F-4A0D-BBC3-6F42EC85F4AB</string>
+			<string>88E2A2E4-9E34-4AC3-8844-4FA25675535B</string>
 			<key>version</key>
 			<integer>2</integer>
 		</dict>
@@ -236,37 +293,6 @@
 			<string>alfred.workflow.action.script</string>
 			<key>uid</key>
 			<string>1124C543-675A-4717-985B-4D4A64D3EA43</string>
-			<key>version</key>
-			<integer>2</integer>
-		</dict>
-		<dict>
-			<key>config</key>
-			<dict>
-				<key>action</key>
-				<integer>0</integer>
-				<key>argument</key>
-				<integer>0</integer>
-				<key>focusedappvariable</key>
-				<false/>
-				<key>focusedappvariablename</key>
-				<string></string>
-				<key>hotkey</key>
-				<integer>119</integer>
-				<key>hotmod</key>
-				<integer>9437184</integer>
-				<key>hotstring</key>
-				<string>↘</string>
-				<key>leftcursor</key>
-				<false/>
-				<key>modsmode</key>
-				<integer>0</integer>
-				<key>relatedAppsMode</key>
-				<integer>0</integer>
-			</dict>
-			<key>type</key>
-			<string>alfred.workflow.trigger.hotkey</string>
-			<key>uid</key>
-			<string>88E2A2E4-9E34-4AC3-8844-4FA25675535B</string>
 			<key>version</key>
 			<integer>2</integer>
 		</dict>
@@ -365,29 +391,6 @@
 		<dict>
 			<key>config</key>
 			<dict>
-				<key>concurrently</key>
-				<false/>
-				<key>escaping</key>
-				<integer>102</integer>
-				<key>script</key>
-				<string>/System/Applications/Mission\ Control.app/Contents/MacOS/Mission\ Control 1</string>
-				<key>scriptargtype</key>
-				<integer>1</integer>
-				<key>scriptfile</key>
-				<string></string>
-				<key>type</key>
-				<integer>0</integer>
-			</dict>
-			<key>type</key>
-			<string>alfred.workflow.action.script</string>
-			<key>uid</key>
-			<string>23F1E2AA-043F-4D20-BE73-31783B137800</string>
-			<key>version</key>
-			<integer>2</integer>
-		</dict>
-		<dict>
-			<key>config</key>
-			<dict>
 				<key>action</key>
 				<integer>0</integer>
 				<key>argument</key>
@@ -413,6 +416,29 @@
 			<string>alfred.workflow.trigger.hotkey</string>
 			<key>uid</key>
 			<string>A1719BC6-178D-4645-965E-D2D4AF3CAB05</string>
+			<key>version</key>
+			<integer>2</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>concurrently</key>
+				<false/>
+				<key>escaping</key>
+				<integer>102</integer>
+				<key>script</key>
+				<string>/System/Applications/Mission\ Control.app/Contents/MacOS/Mission\ Control 1</string>
+				<key>scriptargtype</key>
+				<integer>1</integer>
+				<key>scriptfile</key>
+				<string></string>
+				<key>type</key>
+				<integer>0</integer>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.action.script</string>
+			<key>uid</key>
+			<string>23F1E2AA-043F-4D20-BE73-31783B137800</string>
 			<key>version</key>
 			<integer>2</integer>
 		</dict>
@@ -498,6 +524,77 @@
 			<key>version</key>
 			<integer>1</integer>
 		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>command</key>
+				<integer>6</integer>
+				<key>confirm</key>
+				<false/>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.action.systemcommand</string>
+			<key>uid</key>
+			<string>30C63C69-4E44-4C2D-934E-8C7293DA1FA1</string>
+			<key>version</key>
+			<integer>2</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>concurrently</key>
+				<false/>
+				<key>escaping</key>
+				<integer>102</integer>
+				<key>script</key>
+				<string>sleep 1
+/usr/local/bin/screenresolution set 1024x600x32@60
+sleep 1</string>
+				<key>scriptargtype</key>
+				<integer>1</integer>
+				<key>scriptfile</key>
+				<string></string>
+				<key>type</key>
+				<integer>0</integer>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.action.script</string>
+			<key>uid</key>
+			<string>9541024D-1027-4A3F-9AF7-F7B9611C749D</string>
+			<key>version</key>
+			<integer>2</integer>
+		</dict>
+		<dict>
+			<key>config</key>
+			<dict>
+				<key>action</key>
+				<integer>0</integer>
+				<key>argument</key>
+				<integer>0</integer>
+				<key>focusedappvariable</key>
+				<false/>
+				<key>focusedappvariablename</key>
+				<string></string>
+				<key>hotkey</key>
+				<integer>117</integer>
+				<key>hotmod</key>
+				<integer>9699328</integer>
+				<key>hotstring</key>
+				<string>⌦</string>
+				<key>leftcursor</key>
+				<false/>
+				<key>modsmode</key>
+				<integer>0</integer>
+				<key>relatedAppsMode</key>
+				<integer>0</integer>
+			</dict>
+			<key>type</key>
+			<string>alfred.workflow.trigger.hotkey</string>
+			<key>uid</key>
+			<string>EAC71AD7-6378-4DD7-BAB0-6DFAA47D7A36</string>
+			<key>version</key>
+			<integer>2</integer>
+		</dict>
 	</array>
 	<key>readme</key>
 	<string>Search on labcollab.net</string>
@@ -520,9 +617,9 @@
 		<key>1124C543-675A-4717-985B-4D4A64D3EA43</key>
 		<dict>
 			<key>xpos</key>
-			<integer>280</integer>
+			<integer>275</integer>
 			<key>ypos</key>
-			<integer>185</integer>
+			<integer>315</integer>
 		</dict>
 		<key>23F1E2AA-043F-4D20-BE73-31783B137800</key>
 		<dict>
@@ -544,6 +641,13 @@
 			<integer>285</integer>
 			<key>ypos</key>
 			<integer>740</integer>
+		</dict>
+		<key>30C63C69-4E44-4C2D-934E-8C7293DA1FA1</key>
+		<dict>
+			<key>xpos</key>
+			<integer>530</integer>
+			<key>ypos</key>
+			<integer>895</integer>
 		</dict>
 		<key>3F9C47AF-FF7F-4A0D-BBC3-6F42EC85F4AB</key>
 		<dict>
@@ -573,6 +677,13 @@
 			<key>ypos</key>
 			<integer>185</integer>
 		</dict>
+		<key>9541024D-1027-4A3F-9AF7-F7B9611C749D</key>
+		<dict>
+			<key>xpos</key>
+			<integer>295</integer>
+			<key>ypos</key>
+			<integer>895</integer>
+		</dict>
 		<key>A1719BC6-178D-4645-965E-D2D4AF3CAB05</key>
 		<dict>
 			<key>xpos</key>
@@ -590,9 +701,9 @@
 		<key>AEE6B122-4FB1-44D5-9690-6AF29B55ACB9</key>
 		<dict>
 			<key>xpos</key>
-			<integer>515</integer>
+			<integer>505</integer>
 			<key>ypos</key>
-			<integer>185</integer>
+			<integer>315</integer>
 		</dict>
 		<key>CEBDE9CD-99EE-4313-8EB4-B078F187DBC4</key>
 		<dict>
@@ -600,6 +711,13 @@
 			<integer>40</integer>
 			<key>ypos</key>
 			<integer>465</integer>
+		</dict>
+		<key>EAC71AD7-6378-4DD7-BAB0-6DFAA47D7A36</key>
+		<dict>
+			<key>xpos</key>
+			<integer>55</integer>
+			<key>ypos</key>
+			<integer>895</integer>
 		</dict>
 		<key>F865918D-BE60-42D2-8110-D8B5FC61300F</key>
 		<dict>
