--- a/home-symlink/tmux.conf
+++ b/home-symlink/tmux.conf
@@ -11,6 +11,10 @@ set -g mouse on
 # Set the default terminal mode to 256 colors mode
 set -g default-terminal "screen-256color"
 
+# rebind keys so not to ask confirmation, which can be annoying
+bind-key & kill-window
+bind-key X kill-pane
+
 
 bind '\' split-window -h # Split panes horizontally
 bind '-' split-window -v # Split panes vertically
