--- a/Alfred.alfredpreferences/preferences/local/39b74ab5baaec2a98669cc0e8e69fdc1a09a296d/appearance/prefs.plist
+++ b/Alfred.alfredpreferences/preferences/local/39b74ab5baaec2a98669cc0e8e69fdc1a09a296d/appearance/prefs.plist
@@ -4,5 +4,7 @@
 <dict>
 	<key>darkthemeuid</key>
 	<string>theme.custom.269C4FD7-6B4E-4D4C-9C90-D6B84C116B18</string>
+	<key>lightthemeuid</key>
+	<string>theme.custom.1143980A-D20F-4E10-AE07-5B3F546A3731</string>
 </dict>
 </plist>
