--- a/Alfred.alfredpreferences/preferences/features/defaultresults/prefs.plist
+++ b/Alfred.alfredpreferences/preferences/features/defaultresults/prefs.plist
@@ -5,9 +5,10 @@
 	<key>fallbacks</key>
 	<array>
 		<string>features.websearch.custom.53D72661-80B6-4280-80B4-99AD048F03CF.fallback</string>
-		<string>features.websearch.google.fallback</string>
-		<string>features.websearch.custom.774760E8-F1D2-47F7-BC8D-464812EA5562.fallback</string>
-		<string>features.websearch.custom.EEFB16BA-CD31-4EA2-87FE-0A8166765D15.fallback</string>
+		<string>features.websearch.duckduckgo.fallback</string>
+		<string>features.websearch.custom.B8D6D36F-C827-40ED-B400-72DBC2F719D8.fallback</string>
+		<string>features.websearch.twittersearch.fallback</string>
+		<string>features.websearch.gtranslate.fallback</string>
 	</array>
 	<key>showUserDefined</key>
 	<array>
