moved scripts; changed color recipe

--- a/Alfred.alfredpreferences/preferences/local/1cad9adebe2d96126ebbf26e83e1aea2b6039956/appearance/prefs.plist
+++ b/Alfred.alfredpreferences/preferences/local/1cad9adebe2d96126ebbf26e83e1aea2b6039956/appearance/prefs.plist
@@ -4,5 +4,7 @@
 <dict>
 	<key>darkthemeuid</key>
 	<string>theme.custom.CC7AE866-9BDF-44A6-8944-5CAC09D73BB0</string>
+	<key>lightthemeuid</key>
+	<string>theme.custom.1143980A-D20F-4E10-AE07-5B3F546A3731</string>
 </dict>
 </plist>
