--- a/home-symlink/tmux.conf
+++ b/home-symlink/tmux.conf
@@ -93,7 +93,7 @@ set-window-option -g window-status-format "#I:#W "
 set-window-option -g window-status-current-format "#I:#W "
 
 run-shell "tmux setenv -g TMUX_VERSION $(tmux -V | grep -oE '[0-9]+\.[0-9]*')"
-run-shell "tmux setenv -g TMUX_FG_MAIN $(context-color-rgb -x)"
+run-shell "tmux setenv -g TMUX_FG_MAIN $(rgb_color_generator.py -x)"
 run-shell "tmux setenv -g TMUX_FG_SECOND '#9e9e9e'"
 
 if-shell -b '[ "$(echo "$TMUX_VERSION < 2.9" | bc)" = 1 ]' ' \
