--- a/Alfred.alfredpreferences/workflows/user.workflow.F2FF56A9-B176-4CFA-9C9D-0227E4F19E8D/info.plist
+++ b/Alfred.alfredpreferences/workflows/user.workflow.F2FF56A9-B176-4CFA-9C9D-0227E4F19E8D/info.plist
@@ -182,7 +182,7 @@
 			<key>uid</key>
 			<string>607FA0B2-94A5-48E4-96E9-0BFA8872F7EE</string>
 			<key>version</key>
-			<integer>2</integer>
+			<integer>3</integer>
 		</dict>
 		<dict>
 			<key>config</key>
@@ -210,6 +210,8 @@
 				<false/>
 				<key>alfredfiltersresultsmatchmode</key>
 				<integer>0</integer>
+				<key>argumenttreatemptyqueryasnil</key>
+				<false/>
 				<key>argumenttrimmode</key>
 				<integer>0</integer>
 				<key>argumenttype</key>
@@ -229,7 +231,11 @@
 				<key>runningsubtext</key>
 				<string>Convertifying…</string>
 				<key>script</key>
-				<string>/usr/bin/python convert.py "$1"</string>
+				<string>echo . &gt;&amp;2
+echo "http_proxy=$http_proxy"&gt;&amp;2
+echo "https_proxy=$https_proxy"&gt;&amp;2
+
+/usr/bin/python convert.py "$1"</string>
 				<key>scriptargtype</key>
 				<integer>1</integer>
 				<key>scriptfile</key>
@@ -248,7 +254,7 @@
 			<key>uid</key>
 			<string>1E12C11D-30DB-44A8-AD75-F5BE7F2DA451</string>
 			<key>version</key>
-			<integer>2</integer>
+			<integer>3</integer>
 		</dict>
 		<dict>
 			<key>config</key>
@@ -289,7 +295,7 @@ variables={allvars}</string>
 				<key>escaping</key>
 				<integer>102</integer>
 				<key>script</key>
-				<string>/usr/bin/python defaults.py $action $dimensionality $unit</string>
+				<string>/usr/bin/python defaults.py $action "$dimensionality" "$unit"</string>
 				<key>scriptargtype</key>
 				<integer>1</integer>
 				<key>scriptfile</key>
@@ -364,6 +370,8 @@ variables={allvars}</string>
 				<false/>
 				<key>alfredfiltersresultsmatchmode</key>
 				<integer>0</integer>
+				<key>argumenttreatemptyqueryasnil</key>
+				<false/>
 				<key>argumenttrimmode</key>
 				<integer>0</integer>
 				<key>argumenttype</key>
@@ -402,7 +410,7 @@ variables={allvars}</string>
 			<key>uid</key>
 			<string>EF92F243-C49B-4DFC-B0A4-72317B2457A7</string>
 			<key>version</key>
-			<integer>2</integer>
+			<integer>3</integer>
 		</dict>
 		<dict>
 			<key>config</key>
@@ -472,6 +480,8 @@ variables={allvars}</string>
 			<dict>
 				<key>argument</key>
 				<string>{var:query}</string>
+				<key>passthroughargument</key>
+				<false/>
 				<key>variables</key>
 				<dict/>
 			</dict>
@@ -489,7 +499,7 @@ variables={allvars}</string>
 
 Based on the awesome Pint library.
 
-In addition to all units supported by Pint, all the currencies supported by Yahoo! Finance and cryptocurrencies supported by CryptoCompare.com are supported.
+In addition to all units supported by Pint, almost all the currencies supported by OpenExchangeRates.org and cryptocurrencies supported by CryptoCompare.com are supported.
 
 You can also add your own custom units.
 
@@ -497,11 +507,17 @@ You can also add your own custom units.
 Configuration
 -------------
 
+APP_KEY is your API key for OpenExchangeRates.org. This is required
+to download exchange rates for fiat currencies.
+
+
 COPY_UNIT determines whether the unit is also copied when you press CMD+C. 0 or no value means the unit won't be copied. Any other value means the unit will also be copied.
+
+CURRENCY_DECIMAL_PLACES overrides DECIMAL_PLACES (see below) for currency conversion.
 
 DECIMAL_PLACES is the number of decimal places to show in conversion results.
 
-DECIMAL_SEPARATOR is the character used to separate whole numbers from decimal fraction when parsing and outputting numbers.
+DECIMAL_SEPARATOR is the character used to separate whole numbers from decimal fraction when parsing input and displaying output (see also THOUSANDS_SEPARATOR below).
 
 DYNAMIC_DECIMALS is whether to dynamically increase the number of decimal places shown until the result is non-zero. Set to 0 or empty to turn off.
 
@@ -643,7 +659,7 @@ UPDATE_INTERVAL is the number of minutes between exchange rate updates.</string>
 		<string>APP_KEY</string>
 	</array>
 	<key>version</key>
-	<string>3.5.1</string>
+	<string>3.7.1</string>
 	<key>webaddress</key>
 	<string></string>
 </dict>
