--- a/home-symlink/tmux.conf
+++ b/home-symlink/tmux.conf
@@ -8,13 +8,17 @@
 # Enable mouse support
 set -g mouse on
 
+
+# Add truecolor support
+# (recommendation from: https://github.com/rakr/vim-one)
+set-option -ga terminal-overrides ",xterm-256color:Tc"
+
 # Set the default terminal mode to 256 colors mode
 set -g default-terminal "screen-256color"
 
 # rebind keys so not to ask confirmation, which can be annoying
 bind-key & kill-window
 bind-key X kill-pane
-
 
 bind '\' split-window -h # Split panes horizontally
 bind '-' split-window -v # Split panes vertically
